# UIUCAirfoilConverter

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
src/: airfoil_converter.py  airfol_display.py
