[tool.poetry]
name = "Airfoil Converter"
version = "0.1.0"
description = ""
authors = ["Kelie Bailey <then3rd1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
# "vulture_whitelist.py" = ["F821", "B018"]

# Pylance linter configuration
[tool.pyright]
typeCheckingMode = "standard"
include = ["src/"]
# ignore = [""]

# Ruff linter configuration
[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
include = ["src/"]
# exclude = [""]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C",     # Complexity
    "C4",    # flake8-comprehensions
    "C90",   # mccabe (complexity)
    "D",     # pydocstyle
    "DTZ",   # flake8-datetimez
    "E",     # PyCodeStyle errors
    "EXE",   # flake8-executable
    "F",     # Pyflakes rules
    "FA",    # flake8-future-annotations
    "FBT",   # flake8-boolean-trap
    "FLY",   # flynt (str.join calls replaceable with f-strings)
    "FURB",  # refurb
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420 (require __init__.py)
    "INT",   # flake8-gettext
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "NPY",   # NumPy-specific rules
    "PERF",  # Perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # Pylint
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "T20",   # flake8-print
    "TC",    # flake8-type-checking
    "TD",    # flake8-todos
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # PyCodeStyle warnings
    "YTT",   # flake8-2020
]

# TODO: These rules may or may mot be worth enabling or further consideration depending on the project.
extend-select = [
    # "FIX", # flake8-fixme
    # "ANN", # flake8-annotations
    # "COM", # flake8-commas
    # "EM",  # flake8-errmsg
    # "ERA", # eradicate
    # "S",   # flake8-bandit (exec, assert)
    # "T10", # flake8-debugger

    ## Unused ##
    # "CPY",  # flake8-copyright
    # "PD",   # pandas-vet
    # "PT",   # flake8-pytest-style
]

# These are overly pedantic and not necessarily worth the reward.
ignore = [
    "D107",    # Missing docstring in `__init__`
    "D203",    #incorrect-blank-line-before-class",
    "D211",    # warning: `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D213",    # warning: `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "D400",    # First line should end with a period (prefer D415)
    "D401",    # First line of docstring should be in imperative mood
    "D413",    # Missing blank line after last section
    "D415",    # First line should end with a period, question mark, or exclamation point
    "G004",    # logging statement uses f-string
    "N813",    # Camelcase `DBTerm` imported as lowercase `dbt`
    "PLC0415", # `import` should be at the top-level of a file
    "TD002",   # Missing author in TODO; try: `# _TODO(<author_name>): ...` or `# _TODO @<author_name>: ...`
    "TD003",   # Missing issue link for this TODO
    "TRY003",  # Avoid specifying long messages outside the exception class (Too strict imo)
]

extend-ignore = [
    # TODO: fix issues below
    # "D100", # Missing docstring in public module
    # "D101", # Missing docstring in public class
    # "D102", # Missing docstring in public method
    # "D103", # Missing docstring in public function
]
